<resources>
    <string name="app_name">Trendsepet</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tl">TL</string>
    <string name="ekle">Ekle</string>
    <string name="signup">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="usernameoremail">Kullanıcı Adı ya da Email</string>
    <string name="email">E-Posta</string>
    <string name="lastname">Soyisim</string>
    <string name="name">İsim</string>
    <string name="phonenumber">Telefon Numarası</string>
    <string name="exit">Çıkış Yap</string>
    <string name="addaddress">ADRES EKLE</string>
    <string name="pay">Ödeme Yap</string>
    <string name="save">Kaydet</string>
    <string name="password">Şifre</string>
    <string name="man">Erkek</string>
    <string name="woman">Kadın</string>
    <string name="haveyouaccount">Hesabın var mı ?</string>
    <string name="price">Fiyat</string>
    <string name="addshoppıngcard">Sepete Ekle</string>
    <string name="accept">Onayla</string>
    <string name="properties">Özellikler</string>
    <string name="yorum_yaz">Yorum Yap</string>
    <string name="send">Gönder</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="comment">yorum</string>
    <string name="urunu_degerlendiriniz">Ürünü Değerlendiriniz:</string>
    <string name="comment_hint">Ürünle ilgili yorumlarını fotoğraf ekleyerek daha iyi açıklayabilirsin.</string>
    <string name="degerlendir">Değerlendir</string>
    <string name="add">Ekle</string>

    <dimen name="button_text_size">12sp</dimen>
</resources>