<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <View
            android:layout_width="80dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_bottomsheet" />


        <EditText
            android:id="@+id/bottomsheetlayout_signup_edtemail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_textview_radius"
            android:drawableStart="@drawable/vector_email"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <EditText
            android:id="@+id/bottomsheetlayout_signup_edtpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_textview_radius"
            android:drawableStart="@drawable/vector_password"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/bottomsheetlayout_signup_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_textview_radius"
                android:drawablePadding="5dp"
                android:hint="@string/name"
                android:inputType="textFilter"
                android:paddingStart="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <EditText
                android:id="@+id/bottomsheetlayout_signup_lastname"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_textview_radius"
                android:drawablePadding="5dp"
                android:hint="@string/lastname"
                android:inputType="textFilter"
                android:paddingStart="10dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/bottomsheetlayout_signup_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bottomsheetlayout_signup_radiobutton_male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/bottomsheetlayout_signup_radiobutton_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/woman" />


        </RadioGroup>

        <EditText
            android:id="@+id/bottomsheetlayout_signup_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_textview_radius"
            android:drawableStart="@drawable/vector_phonenumber"
            android:drawablePadding="5dp"
            android:hint="@string/phonenumber"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/haveyouaccount"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/bottomsheetlayout_signup_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/orange_200" />
        </LinearLayout>

        <TextView
            android:id="@+id/bottomsheetlayout_signup_txtsignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_textview_orange"
            android:gravity="center"
            android:text="@string/signup"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@color/white_smoke" />

    </LinearLayout>
</LinearLayout>