<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_textview_radius"
                        android:drawableStart="@drawable/vector_email"
                        android:drawablePadding="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <TextView
                        android:id="@+id/tvChangePassword"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_textview_orange_radial"
                        android:gravity="center"
                        android:text="Şifre Değiştir"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                        android:textColor="@color/white_smoke" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="6dp">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/ivProfileImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/choose_image"
                        app:riv_oval="true" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_textview_radius"
                        android:drawablePadding="5dp"
                        android:hint="@string/name"
                        android:inputType="textFilter"
                        android:paddingStart="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                    <EditText
                        android:id="@+id/etSurname"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_textview_radius"
                        android:drawablePadding="5dp"
                        android:hint="@string/lastname"
                        android:inputType="textFilter"
                        android:paddingStart="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                </LinearLayout>

                <RadioGroup
                    android:id="@+id/rgGender"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbMale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/man" />

                    <RadioButton
                        android:id="@+id/rbFemale"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/woman" />

                </RadioGroup>

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_textview_radius"
                    android:drawableStart="@drawable/vector_phonenumber"
                    android:drawablePadding="5dp"
                    android:hint="@string/phonenumber"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <TextView
        android:id="@+id/tvSave"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/custom_textview_orange"
        android:gravity="center"
        android:text="@string/save"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white_smoke" />

</LinearLayout>