<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RateProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    >

                    <ImageView
                        android:id="@+id/ivProductImage"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_launcher_background" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/etBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ürün Markası"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/etProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ürün Adı"
                        android:textColor="@color/gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Satıcı: "
                            android:textColor="@color/gray" />

                        <TextView
                            android:id="@+id/etSellerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Teknosa"
                            android:textColor="@color/blue" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/etPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="1000"
                            android:textColor="@color/orange_200"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" TL"
                            android:textColor="@color/orange_200"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/urunu_degerlendiriniz"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/etRatingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/yorum_yaz"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_textview_whitesmoke"
                android:gravity="start"
                android:hint="@string/comment_hint"
                android:minHeight="100dp"
                android:padding="10dp"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Ürün Fotoğrafı Ekle"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivCommentImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/choose_image" />
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tvRate"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/custom_textview_orange"
        android:gravity="center"
        android:text="@string/degerlendir"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white_smoke" />

</LinearLayout>